# mri-modality-translation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline_encoder_decoder.yaml  baseline_encoder_decoder_global_minmax.yaml  baseline_encoder_decoder_percentile_minmax.yaml  eval.yaml  resunet_global_minmax.yaml  unet.yaml  unet_global_minmax.yaml  unet_percentile_minmax.yaml
notebooks/: 01_dataset_eda.ipynb  02_qualitative_results.ipynb  03_error_analysis.ipynb  README.md
notebooks/archive/: original_coursework_notebook.ipynb
reports/: .gitkeep
reports/notes/: README.md
reports/tables/: normalization_ablation_deltas.csv  normalization_ablation_deltas.md  normalization_stats.csv  normalization_stats.md  qualitative_selected_samples.csv  qualitative_selected_samples.md  qualitative_summary_table.csv  qualitative_summary_table.md  resunet_per_view_metrics.csv  resunet_per_view_metrics.md  split_summary.csv  split_summary.md  test_results_table.csv  test_results_table.md
scripts/: evaluate.py  export_figures.py  prepare_data.py  train.py
src/mri_translation/: __init__.py  config.py  metrics.py
src/mri_translation/data/: datasets.py  download.py  normalization.py  splits.py  stats.py  transforms.py
src/mri_translation/engine/: evaluate.py  train.py
src/mri_translation/models/: baseline.py  factory.py  resunet.py  unet.py
src/mri_translation/utils/: io.py  seed.py
src/mri_translation/viz/: plots.py
tests/: test_data_pipeline.py  test_metrics.py  test_models.py
